/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
//    id 'versions-maven-plugin' version "2.16.1"
    id "com.github.ben-manes.versions" version "0.28.0"
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.10'
    api 'mysql:mysql-connector-java:8.0.33'
    api 'org.springframework.data:spring-data-elasticsearch:5.0.0'
    api 'com.netflix.hystrix:hystrix-core:1.5.18'
    api 'org.springframework.data:spring-data-r2dbc:1.2.1'
    api 'com.alibaba:druid:1.2.3'
    api 'org.apache.camel.quarkus:camel-quarkus-disruptor:1.3.0'
    api 'com.101tec:zkclient:0.11'
    api 'org.apache.helix:helix-core:0.8.2'
    api 'io.dropwizard.metrics:metrics-core:4.1.13'
    api 'io.dropwizard.metrics:metrics-healthchecks:4.1.13'
    api 'io.dropwizard.metrics:metrics-jvm:4.1.13'
    api 'com.lmax:disruptor:3.4.2'
    api 'org.apache.shardingsphere:sharding-jdbc-core:4.1.1'
    api 'io.airlift:airline:0.8'
    api 'io.micrometer:micrometer-registry-influx:1.1.3'
    api 'javax.ws.rs:javax.ws.rs-api:2.0.1'
    api 'javax.xml.ws:jaxws-api:2.3.1'
    api 'org.glassfish.jersey.containers:jersey-container-servlet:2.19'
    api 'org.glassfish.jersey.core:jersey-server:2.19'
    api 'org.glassfish.jersey.core:jersey-client:2.19'
    api 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.4.RELEASE'
    api 'org.springframework.boot:spring-boot-starter-data-cassandra-reactive:2.3.2.RELEASE'
    api 'org.hibernate:hibernate-validator:7.0.0.Alpha6'
    api 'com.google.code.gson:gson:2.8.9'
    api 'com.typesafe.akka:akka-actor_2.12:2.5.11'
    api 'com.typesafe.akka:akka-remote_2.12:2.5.11'
    api 'com.github.zero9102:xxl-job-spring-boot-starter:2.3.0'
    api 'org.projectlombok:lombok:1.18.22'
    api 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon:2.2.10.RELEASE'
    api 'com.baomidou:mybatis-plus-boot-starter:3.2.0'
//    api 'org.codehaus.groovy:groovy-eclipse-compiler:3.7.0'
//    api 'org.codehaus.groovy:groovy-all:3.7.0'
    api 'org.slf4j:slf4j-api:1.7.36'
    api 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.1'
    api 'io.zipkin.brave:brave:5.13.7'
    api 'com.alibaba:transmittable-thread-local:2.12.6'
    api 'com.googlecode.aviator:aviator:5.3.0'
    api 'org.jboss:javassist:3.7.1.GA'
    api 'org.deeplearning4j:deeplearning4j-core:1.0.0-M1.1'
    api 'org.nd4j:nd4j-native-platform:1.0.0-M1.1'
    api 'org.aspectj:aspectjrt:1.9.6'
    api 'org.aspectj:aspectjweaver:1.9.6'
    api 'org.springframework.boot:spring-boot-starter-rsocket:2.7.14'
    api 'io.rsocket:rsocket-core:1.1.1'
    api 'io.rsocket:rsocket-transport-netty:1.1.1'
    api 'com.squareup.okhttp3:okhttp:3.14.9'
    api 'io.gatling.highcharts:gatling-charts-highcharts:3.5.1'
    api 'com.google.inject:guice:4.2.2'
    api 'com.google.inject.extensions:guice-multibindings:4.2.2'
    api 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
    api 'org.springframework.boot:spring-boot-starter-web:2.6.6'
    api 'org.springframework.boot:spring-boot-starter-webflux:2.6.6'
    api 'org.springframework.cloud:spring-cloud-stream-reactive:2.1.3.RELEASE'
    api 'org.springframework.integration:spring-integration-file:5.5.10'
    api 'com.graphql-java:graphql-java:8.0'
    api 'org.springframework.boot:spring-boot-starter-websocket:2.6.6'
    api 'com.github.pagehelper:pagehelper:5.1.2'
    api 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.13.2'
    api 'com.google.protobuf:protobuf-java:2.5.0'
    api 'redis.clients:jedis:3.7.1'
    api 'io.protostuff:protostuff-core:1.5.2'
    api 'io.protostuff:protostuff-runtime:1.5.2'
    api 'org.springframework.boot:spring-boot-starter-aop:2.6.6'
    api 'org.springframework.boot:spring-boot-configuration-processor:2.6.6'
    api 'org.apache.poi:poi-ooxml:3.17'
    api 'com.offbytwo.jenkins:jenkins-client:0.3.7'
    api 'org.springframework:spring-context:5.3.18'
    api 'org.springframework:spring-webmvc:5.3.18'
    api 'org.junit.jupiter:junit-jupiter:5.8.2'
    api 'org.apache.commons:commons-lang3:3.12.0'
    api 'org.skyscreamer:jsonassert:1.5.0'
    api 'io.gatling:gatling-app:3.5.1'
    api 'io.gatling:gatling-recorder:3.5.1'
    api 'commons-codec:commons-codec:1.15'
    api 'io.github.resilience4j:resilience4j-all:1.2.0'
    api 'org.apache.rocketmq:rocketmq-common:4.7.0'
    api 'org.apache.rocketmq:rocketmq-tools:4.7.0'
    api 'org.apache.rocketmq:rocketmq-client:4.7.0'
    api 'joda-time:joda-time:2.9.9'
    implementation 'junit:junit:4.13.2!!!'
    testImplementation 'io.projectreactor:reactor-test:3.4.16'
    testImplementation 'org.springframework.cloud:spring-cloud-stream-test-support:2.1.3.RELEASE'
    testImplementation 'org.springframework.boot:spring-boot-test:2.6.6'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.6'
}

group = 'com.myjava'
version = '1.0.0-SNAPSHOT'
description = 'myjava'
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
    options.fork = true
    options.forkOptions.jvmArgs += [
            '--add-exports', 'java.base/jdk.internal.vm.annotation=ALL-UNNAMED',
            '--add-exports', 'java.desktop/com.sun.beans.editors=ALL-UNNAMED']
}

tasks.withType(Test) {
    jvmArgs('--enable-preview')
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
